--- a/the-memer/src/index.css
+++ b/the-memer/src/index.css
@@ -2,11 +2,57 @@
 @tailwind components;
 @tailwind utilities;
 
+/* import font */
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@layer base {
+  :root{
+    /* White Color Palette */
+    --white-primary: #f5f6fa;
+    --white-secondary: #F6F8FC;
+    --white-tertiary: #FBFBFF;
+    --white-quaternary: #F1F4F6;
+    --white-quinary: #f2f2f9;
+    --border-white: #e5e7eb;
+
+    /* Black Color Palette */
+    --black-primary: #100F0F;
+    --black-secondary: #1F2146;
+    --black-tertiary: #1B2430;
+    --black-quaternary: #2f3542;
+    --black-quinary: #1e272e;
+
+    /* Black Color Palette */
+    --purple-primary: #4834d4;
+    /* --black-secondary: #1F2146;
+    --white-tertiary: #1B2430;
+    --white-quaternary: #2f3542;
+    --white-quinary: #1e272e; */
+
+    /* font family */
+    --font-lobster: 'Lobster Two', cursive;
+    --font-raleway: 'Raleway', sans-serif;
+
+  }
+}
+
+/* Input stype X remove */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+input{
+  font-weight: 500;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font-raleway);
+  font-weight: 500;
+  color: var(--black-primary);
+  background-color:var(--white-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
